# aef

./: .gitignore  Cargo.toml  README.md
completions/: bash  zsh
man/: compile.sh  source.md
packaging/: .gitignore  package.sh
packaging/deb/doby/DEBIAN/: control
packaging/pkg/: PKGBUILD
packaging/tarball/doby/: completions  install.sh  uninstall.sh
src/: cli.rs  crypto.rs  lib.rs  main.rs
tests/: authentication.rs  cli.rs
