[package]
name = "doby"
version = "0.1.0"
edition = "2018"
authors = ["Hardcore Sushi <hardcore.sushi@disroot.org>"]
license = "GPL-3.0-or-later"
description = "Secure symmetric encryption from the command line"
readme = "README.md"

[profile.release]
lto = true
codegen-units = 1

[profile.dev.package.argon2]
opt-level = 3

[dependencies]
clap = "2.33"
rand = "0.8"
num_enum = "0.5"
cpufeatures = "0.1"
aes = { version = "0.7", features = ["ctr"] }
chacha20 = "0.7"
hmac = "0.11"
blake3 = "0.3"
hkdf = "0.11"
argon2 = "0.2"
rpassword = "5.0"
zeroize = "1.3"