[package]
name = "doby"
version = "0.3.0"
edition = "2021"
authors = ["Hardcore Sushi <hardcore.sushi@disroot.org>"]
license = "GPL-3.0-or-later"
description = "Simple, secure and lightweight symmetric encryption from the command line"
readme = "README.md"
repository = "https://forge.chapril.org/hardcoresushi/doby"

[profile.release]
lto = true
codegen-units = 1

[profile.dev.package.argon2]
opt-level = 3

[dependencies]
clap = "2.33"
rand = "0.8"
num_enum = "0.5"
cpufeatures = "0.2"
aes = { version = "0.7", features = ["ctr"] }
chacha20 = "0.8"
subtle = "2.4"
blake2 = "0.9"
hkdf = "0.11"
argon2 = "0.3"
rpassword = "5.0"
zeroize = "1.3"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.0"